fixed #3684 - Calendars inline with icons overlapping
ui-calendar-button position changed to relative

--- a/src/app/components/calendar/calendar.css
+++ b/src/app/components/calendar/calendar.css
@@ -4,7 +4,7 @@
 }
 
 .ui-calendar .ui-calendar-button {
-    position: absolute;
+    position: relative;
     height: 100%;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
